Bug 64085 - EDIT:Calc: Outside of editing mode, Arabic text is left-aligned when changing wrt direction to RTL and text alignment to justify.
Summary: EDIT:Calc: Outside of editing mode, Arabic text is left-aligned when changing...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
4.1.0.0.alpha0+ Master
Hardware: Other All
: medium normal
Assignee: navin patidar
URL:
Whiteboard: target:4.1.0
Keywords:
Depends on:
Blocks:
 
Reported: 2013-04-30 12:33 UTC by navin patidar
Modified: 2013-06-10 06:39 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description navin patidar 2013-04-30 12:33:22 UTC
Steps to reproduce bug
1. Enter Arabic text in cell.
2. Change cell wrt direction to RTL.
3. Change cell alignment  to justify.
4. Click on any other cell to come out from editing mode. 
 
Result 
Text is left aligned.
Comment 1 Ahmad Harthi 2013-04-30 12:39:29 UTC
Confirmed in Master.
Comment 2 Commit Notification 2013-05-02 07:08:31 UTC
navin patidar committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=5fc1ba6e6bf22effe4391e22fe94a2ec0fc10100

fix fdo#64085 : set proper alignment for justified align text.



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 3 Ahmad Harthi 2013-06-09 07:44:54 UTC
*** Bug 65563 has been marked as a duplicate of this bug. ***
Comment 4 Lior Kaplan 2013-06-10 06:39:17 UTC
Fix verified by Ahmad Hussein Al-Harthi <aalharthi@kacst.edu.sa>