fix fdo#64085 : set proper alignment for justified align text.

According to cell writing direction, set alignment for justified align text.

Change-Id: I91e1c52f1aa13a806e2a91dc7120960a4cc3f5c1
Reviewed-on: https://gerrit.libreoffice.org/3704
Reviewed-by: Tor Lillqvist <tml@iki.fi>
Tested-by: Tor Lillqvist <tml@iki.fi>